--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <section id="about" class="section about">
       <h2>About Me</h2>
       <p>
-        I’m Surekha Chavan, a self-taught web developer transitioning from 10+
-        years in the teaching field to technology. Skilled in HTML, CSS,
+        I’m Surekha Chavan, a self-taught web developer transitioning from
+        teaching field to technology. Skilled in HTML, CSS,
         JavaScript. My teaching background has strengthened my problem-solving
         and communication skills, which I now apply to building clean,
         user-friendly applications.
